<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">RunTracker</string>

    <string name="gps_enabled">GPS Enabled</string>
    <string name="gps_disabled">GPS Disabled</string>
    
    <!-- public string -->
    <string name="enabled">Enabled</string>
    <string name="disabled">Disabled</string>
    
    <!-- SplashActivity -->
    <!-- layout -->
    <string name="track_your_trip_route">Record your travel trip</string>
    
    <!-- RunListActivity -->    
    <!-- layout -->
    <string name="run_desc">Run record:%s</string>
    <string name="run_list_trip_point">Trip Point:</string>
    <string name="run_list_total_metre">Total Metre:</string>
    <string name="start">Start</string>
    <string name="stop">stop</string>
    <string name="first_use_guide_title">欢迎使用旅行线路记录</string>
    <string name="first_use_guide_info">软件会使用GPS定位服务来记录旅行线路位置，请开启你手机上的GPS定位服务，请不要禁止本软件使用定位服务，否则将无法记录旅行线路信息</string>
    <string name="first_use_gps_guide_title">请注意</string>
    <string name="first_use_gps_guide_info_first">在使用过程中请不要关闭定位服务，本软件是在后台自动记录旅行线路，在开启旅行记录后你可以退出本软件，这期间你可以在手机上做其他的事，一旦旅行记录完毕，请再次进入本软件停止记录</string>
    <string name="first_use_gps_guide_info_second">在建筑物内会阻拦GPS信号，所以在建筑物内是无法进行GPS定位的，请在室外记录旅行</string>
    <string name="do_not_warn_me_again">下次不要再提醒我</string>
    
    <string name="update_run_name">Update Run Name</string>
    <!-- menu -->
    <string name="new_run">New Run</string>
    <string name="config">Config</string>
    <string name="delete_run">Delete Run</string>
    
    <!-- back -->
    <string name="does_not_input_run_name">You didn\'t input run name,The origin name will be used.</string>
    <string name="press_again_to_exit">Press again to exit RunTracker!</string>
    <string name="cant_start_tracking_gps_not_enabled">Can\'t start tracking.Please enable your GPS service.</string>
    
    <!-- RunActivity -->
    <!-- layout -->
    <string name="run_name">Run Name:</string>
    <string name="started">Started:</string>
    <string name="elapsed_time">Elapsed Time:</string>
    <string name="total_trip_point">Total trip point:</string>
    <string name="total_metre">Total Metre:</string>
    <string name="show_map">Show Map</string>
    <!-- menu -->
    <string name="back">Back</string>
    <!-- back -->
    <string name="cant_show_total_metre_no_location_data">Can\'t show total metre,There is no location data!</string>    
    <string name="cant_show_total_metre_need_more_location_data">Can\'t show total metre,There is only one location data,need more!</string>    
    <string name="run_detail">Run Detail</string>
    
    <!-- RunMapActivity -->
    <!-- layout -->
    <!-- menu -->
    <string name="normal_map">Normal Map</string>
    <string name="satellite_map">Satellite Map</string>
    <string name="show_my_location">Show my location</string>
    <string name="do_not_show_my_location">Don\'t Show my location</string>
    <string name="location_mode_normal">Location Mode Normal</string>
    <string name="location_mode_following">Location Mode Following</string>
    <string name="location_mode_compass">Location Mode Compass</string>
    <string name="locate_to_start_point">Locate to Start Point</string>
    <string name="locate_to_dest_point">Locate to Dest Point</string>
    <string name="show_all_trip_point">Show All trip point</string>
    <!-- back -->
    <string name="cant_get_sensor">Can\'t get Sensor! Unable to show your direction</string>
    <string name="trip_point">Trip Point %d</string>
    <string name="start_point">Start Point</string>
    <string name="dest_point">Dest Point</string>
    <string name="no_location_data">There is no location data!</string>    
    <string name="need_more_location_data">There is only one location data,need more!</string>    
    
    <!-- ConfigActivity -->
    <!-- layout -->
    <string name="record_time_title">Record time (Second)</string>
    <string name="record_time_desc">The software will record current location every %d second.</string>
    <string name="record_time_setting_info">Please set the recored time at a proper rate.Recommend value is 90.The less value you set,The more frequently GPS service is been called.And it will cost more power</string>
    <string name="location_service_title">Config Location Service</string>
    <string name="location_service_desc">Config my Location Service.You should enable your location service.Otherwise you can\'t track your trip.</string>
    <string name="use_guide_title">软件使用说明</string>
    <string name="use_guide_desc">如果无法使用旅行记录，请仔细阅读使用说明，查看是否开启GPS定位服务</string>
    <!-- menu -->
    <!-- back -->
    <string name="config_config">Config</string>
    
    <!-- DeleteRunItemsActivity -->
    <!-- layout -->
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="delete_description">Please select the items you want to delete.</string>
    <!-- menu -->
    <!-- back -->
    <string name="no_items_are_been_selected">Can\'t delete.No items are been selected.</string>
    <string name="delete_success">Delete Success.</string>
    <string name="dri_delete_run">Delete Run</string>
    
</resources>
