<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    
    <item 
        android:id="@+id/menu_item_normal_map"
        android:title="@string/normal_map"
        android:showAsAction="ifRoom"
        />
        
    <item 
        android:id="@+id/menu_item_satellite_map"
        android:title="@string/satellite_map"
        android:showAsAction="ifRoom"
        />
    
    <item
        android:id="@+id/menu_item_show_my_location"
        android:title="@string/show_my_location"
        android:showAsAction="ifRoom"
        />

    <item 
        android:id="@+id/menu_item_do_not_show_my_location"
        android:title="@string/do_not_show_my_location"
        android:showAsAction="ifRoom"
        />
    
</menu>
