<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >
        
    <TableRow>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:padding="4dp"
            android:paddingRight="8dp"
            android:text="@string/run_name"
            />
        <TextView android:id="@+id/tv_run_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="游公园"
            />
    </TableRow>
    
    <TableRow>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:padding="4dp"
            android:paddingRight="8dp"
            android:text="@string/total_metre"
            />
        <TextView android:id="@+id/run_totalMetreTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="3600"
            />
    </TableRow>
    
    <TableRow>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:padding="4dp"
            android:paddingRight="8dp"
            android:text="@string/elapsed_time"
            />
        <TextView android:id="@+id/run_durationTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="03:16:25"
            />
    </TableRow>
        
    <TableRow>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:padding="4dp"
            android:paddingRight="8dp"
            android:text="@string/total_trip_point"
            />
        <TextView android:id="@+id/tv_total_trip_point"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="45"
            />
    </TableRow>
    
    <TableRow>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:padding="4dp"
            android:paddingRight="8dp"
            android:text="@string/started"
            />
        <TextView android:id="@+id/run_startedTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="2017年02月04日 15:46:23"
            />
    </TableRow>
    
    <Button 
        android:id="@+id/button_show_map"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/show_map"
        />
</TableLayout>
